// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message detail view it renders the confirmed but not executed msg state correctly 1`] = `
.c6 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c6 p {
  margin: 0;
  line-height: 1.5;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 1em;
  margin-bottom: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-gap: 1em;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 1rem;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--purple-medium);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 1.125em;
  height: 20px;
}

.c11 {
  width: 24;
  height: 24;
}

.c10 {
  height: auto;
  cursor: pointer;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c13 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c9:hover .c12 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c15 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
  text-align: left;
  color: var(--purple-medium);
  margin-top: 0;
  margin-left: 4px;
  margin-top: 0;
  margin-left: 4px;
}

.c9:hover .c14 {
  opacity: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 0.25em;
  line-height: 1.5;
}

.c7 a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
  padding: 0 1em;
  height: 2em;
  line-height: 2em;
  border-radius: 1em;
  text-align: center;
  white-space: nowrap;
  color: var(--purple-medium);
  background-color: var(--purple-light);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c3 > p,
.c3 > hr {
  margin: 0.5em 0;
}

.c3 > p[role='button'] {
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c4 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c4 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c1 {
  margin-top: 0;
  color: var(--purple-medium);
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <h2
      class="c1"
    >
      Message Overview
    </h2>
    <div
      class="c2"
      display="flex"
    />
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div>
        CID
      </div>
      <div>
        bafy2bzaced3ub5g4v35tj7n74zsog3dmcum4tk4qmchbhjx7q747jghal3l4g
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Height
      </div>
      <div>
        Pending
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Timestamp
      </div>
      <div>
        <svg
          class="c5"
          fill="none"
          height="20px"
          viewBox="0 0 20 20"
          width="1.125em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 6V10L13 13M19 10C19 11.1819 18.7672 12.3522 18.3149 13.4442C17.8626 14.5361 17.1997 15.5282 16.364 16.364C15.5282 17.1997 14.5361 17.8626 13.4442 18.3149C12.3522 18.7672 11.1819 19 10 19C8.8181 19 7.64778 18.7672 6.55585 18.3149C5.46392 17.8626 4.47177 17.1997 3.63604 16.364C2.80031 15.5282 2.13738 14.5361 1.68508 13.4442C1.23279 12.3522 1 11.1819 1 10C1 7.61305 1.94821 5.32387 3.63604 3.63604C5.32387 1.94821 7.61305 1 10 1C12.3869 1 14.6761 1.94821 16.364 3.63604C18.0518 5.32387 19 7.61305 19 10Z"
            stroke="#3F3F46"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        
      </div>
    </div>
    <hr />
    <div
      class="c4"
    >
      <div>
        From
      </div>
      <div>
        <div
          class="c6"
        >
          
          <div
            class="c7"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1z225 ... 6z6wgi
            </a>
            <div
              class="c8"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c9 c10"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c11 c12 c13"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c14 c15"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        To
      </div>
      <div>
        <div
          class="c6"
        >
          
          <div
            class="c7"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1nq5k ... btuo3a
            </a>
            <div
              class="c8"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c9 c10"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c11 c12 c13"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c14 c15"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="c4"
    >
      <div>
        Value
      </div>
      <div>
        0.000000000000001 FIL
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Method
      </div>
      <div>
        <div
          class="c16"
          color="purple"
        >
          <span>
            SEND
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message detail view it renders the executed msg state correctly 1`] = `
.c9 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c9 p {
  margin: 0;
  line-height: 1.5;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 1em;
  margin-bottom: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-gap: 1em;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 1rem;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--purple-medium);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 1.125em;
  height: 20px;
}

.c14 {
  width: 24;
  height: 24;
}

.c6 {
  width: 1.1875rem;
  height: 22px;
}

.c13 {
  height: auto;
  cursor: pointer;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c16 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c12:hover .c15 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c18 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
  text-align: left;
  color: var(--purple-medium);
  margin-top: 0;
  margin-left: 4px;
  margin-top: 0;
  margin-left: 4px;
}

.c12:hover .c17 {
  opacity: 1;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 0.25em;
  line-height: 1.5;
}

.c10 a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
  padding: 0 1em;
  height: 2em;
  line-height: 2em;
  border-radius: 1em;
  text-align: center;
  white-space: nowrap;
  color: var(--purple-medium);
  background-color: var(--purple-light);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
  padding: 0 1em;
  height: 2em;
  line-height: 2em;
  border-radius: 1em;
  text-align: center;
  white-space: nowrap;
  color: var(--green-medium);
  background-color: var(--green-light);
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
  padding: 0 1em;
  height: 2em;
  line-height: 2em;
  border-radius: 1em;
  text-align: center;
  white-space: nowrap;
  color: var(--yellow-dark);
  background-color: var(--yellow-light);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c3 > p,
.c3 > hr {
  margin: 0.5em 0;
}

.c3 > p[role='button'] {
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c4 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c4 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c1 {
  margin-top: 0;
  color: var(--purple-medium);
}

.c20 {
  color: var(--gray-medium);
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <h2
      class="c1"
    >
      Message Overview
    </h2>
    <div
      class="c2"
      display="flex"
    />
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div>
        CID
      </div>
      <div>
        bafy2bzaced3ub5g4v35tj7n74zsog3dmcum4tk4qmchbhjx7q747jghal3l4g
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Status and Confirmations
      </div>
      <div>
        <div
          class="c5"
          color="green"
        >
          <svg
            class="c6"
            fill="none"
            height="22px"
            viewBox="0 0 23 22"
            width="1.1875rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12.5264L7.42857 19.544L21 2"
              stroke="#007B39"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </svg>
          <span>
            SUCCESS
          </span>
        </div>
        <div
          class="c7"
          color="yellow"
        >
          <span>
            0 / 50 Confirmations
          </span>
        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Height
      </div>
      <div>
        100
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Timestamp
      </div>
      <div>
        <svg
          class="c8"
          fill="none"
          height="20px"
          viewBox="0 0 20 20"
          width="1.125em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 6V10L13 13M19 10C19 11.1819 18.7672 12.3522 18.3149 13.4442C17.8626 14.5361 17.1997 15.5282 16.364 16.364C15.5282 17.1997 14.5361 17.8626 13.4442 18.3149C12.3522 18.7672 11.1819 19 10 19C8.8181 19 7.64778 18.7672 6.55585 18.3149C5.46392 17.8626 4.47177 17.1997 3.63604 16.364C2.80031 15.5282 2.13738 14.5361 1.68508 13.4442C1.23279 12.3522 1 11.1819 1 10C1 7.61305 1.94821 5.32387 3.63604 3.63604C5.32387 1.94821 7.61305 1 10 1C12.3869 1 14.6761 1.94821 16.364 3.63604C18.0518 5.32387 19 7.61305 19 10Z"
            stroke="#3F3F46"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        
      </div>
    </div>
    <hr />
    <div
      class="c4"
    >
      <div>
        From
      </div>
      <div>
        <div
          class="c9"
        >
          
          <div
            class="c10"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1z225 ... 6z6wgi
            </a>
            <div
              class="c11"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c12 c13"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c14 c15 c16"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c17 c18"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        To
      </div>
      <div>
        <div
          class="c9"
        >
          
          <div
            class="c10"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1nq5k ... btuo3a
            </a>
            <div
              class="c11"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c12 c13"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c14 c15 c16"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c17 c18"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="c4"
    >
      <div>
        Value
      </div>
      <div>
        0.000000000000001 FIL
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Method
      </div>
      <div>
        <div
          class="c19"
          color="purple"
        >
          <span>
            SEND
          </span>
        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Transaction Fee
      </div>
      <div>
        &lt; 0.001 FIL
      </div>
    </div>
    <hr />
    <p
      role="button"
    >
      Click to see less ↑
    </p>
    <div
      class="c4"
    >
      <div>
        Gas Limit & Usage by Txn
      </div>
      <div>
        1,000
        <span
          class="c20"
        >
          |
        </span>
        100
         attoFil
        <span>
          (
          10.0%
          )
        </span>
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Gas Fees
      </div>
      <div>
        <span
          class="c20"
        >
          Premium
        </span>
        1
         attoFIL
      </div>
    </div>
    <div
      class="c4"
    >
      <div />
      <div>
        <span
          class="c20"
        >
          Fee Cap
        </span>
        100
         attoFIL
      </div>
    </div>
    <div
      class="c4"
    >
      <div />
      <div>
        <span
          class="c20"
        >
          Base
        </span>
        100
         attoFIL
      </div>
    </div>
    <div
      class="c4"
    >
      <div>
        Gas Burned
      </div>
      <div>
        200
         attoFIL
      </div>
    </div>
    <hr />
    <div
      class="c4"
    >
      <div>
        Parameters
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Message detail view it renders the loading view correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 1em;
  margin-bottom: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-gap: 1em;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 1rem;
}

.c4 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c4 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c4 > h2:first-child {
  margin: 0;
}

.c4 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c5 {
  background-color: var(--blue-gray);
}

.c5 hr {
  border-color: var(--gray-medium);
}

.c6 {
  position: relative;
  display: inline-block;
  background-color: var(--purple-medium);
  width: 3em;
  height: 3em;
  margin: 0;
}

.c6:after {
  position: absolute;
  display: block;
  content: '';
  top: 0;
  left: 0;
  background-color: var(--purple-dark);
  -webkit-animation-name: gxoozo;
  animation-name: gxoozo;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  width: calc(3em * 0.5);
  height: calc(3em * 0.5);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c3 > p,
.c3 > hr {
  margin: 0.5em 0;
}

.c3 > p[role='button'] {
  margin: 0;
}

.c1 {
  margin-top: 0;
  color: var(--purple-medium);
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <h2
      class="c1"
    >
      Message Overview
    </h2>
    <div
      class="c2"
      display="flex"
    />
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <span
        class="c6"
      />
      <p>
        Searching for 
        bafy2bzaced3ub5g4v35tj7n74zsog3dmcum4tk4qmchbhjx7q747jghal3l4g
        ... Give us a moment
      </p>
    </div>
  </div>
</div>
`;

exports[`Message detail view it renders the not found state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 1em;
  margin-bottom: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-gap: 1em;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 1rem;
}

.c4 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c4 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c4 > h2:first-child {
  margin: 0;
}

.c4 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c5 {
  background-color: var(--blue-gray);
}

.c5 hr {
  border-color: var(--gray-medium);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c3 > p,
.c3 > hr {
  margin: 0.5em 0;
}

.c3 > p[role='button'] {
  margin: 0;
}

.c1 {
  margin-top: 0;
  color: var(--purple-medium);
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <h2
      class="c1"
    >
      Message Overview
    </h2>
    <div
      class="c2"
      display="flex"
    />
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <p>
        Message 
        bafy2bzaced3ub5g4v35tj7n74zsog3dmcum4tk4qmchbhjx7q747jghal3l4g
         not found.
      </p>
      <p>
        Note - it may take 1-2 minutes for a recently confirmed message to show up here.
      </p>
    </div>
  </div>
</div>
`;

exports[`Message detail view it renders the pending msg state correctly 1`] = `
.c9 h4 {
  margin: 0;
  color: var(--gray-dark);
}

.c9 p {
  margin: 0;
  line-height: 1.5;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 1em;
  margin-bottom: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-gap: 1em;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 1rem;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  color: var(--purple-medium);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 1.25rem;
  height: 25px;
}

.c6 {
  width: 0.8rem;
  height: 28px;
}

.c14 {
  width: 24;
  height: 24;
}

.c13 {
  height: auto;
  cursor: pointer;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c16 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c12:hover .c15 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c18 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
  text-align: left;
  color: var(--purple-medium);
  margin-top: 0;
  margin-left: 4px;
  margin-top: 0;
  margin-left: 4px;
}

.c12:hover .c17 {
  opacity: 1;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-gap: 0.25em;
  line-height: 1.5;
}

.c10 a {
  color: var(--purple-medium);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 a:hover {
  color: var(--purple-medium);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--red-medium);
  background: var(--red-medium);
}

.c5 svg path {
  stroke: var(--black);
}

.c5:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c5:hover svg path {
  stroke: var(--purple-medium);
}

.c5:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c5:active svg path {
  stroke: var(--white) !important;
}

.c5 svg path {
  stroke: var(--white);
}

.c5:hover {
  color: var(--red-medium);
  border-color: var(--red-medium);
  background: var(--white);
}

.c5:hover svg path {
  stroke: var(--red-medium);
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
  padding: 0 1em;
  height: 2em;
  line-height: 2em;
  border-radius: 1em;
  text-align: center;
  white-space: nowrap;
  color: var(--purple-medium);
  background-color: var(--purple-light);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--space-m);
}

.c7 > p,
.c7 > hr {
  margin: 0.5em 0;
}

.c7 > p[role='button'] {
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1em;
  line-height: 2.5em;
  text-align: left;
  padding-left: 0em;
}

.c8 > div:first-child {
  -webkit-flex: 0 1 25%;
  -ms-flex: 0 1 25%;
  flex: 0 1 25%;
  min-width: 200px;
  text-transform: capitalize;
}

.c8 > div:last-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.75em;
  word-break: break-word;
}

.c1 {
  margin-top: 0;
  color: var(--purple-medium);
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <h2
      class="c1"
    >
      Message Overview
    </h2>
    <div
      class="c2"
      display="flex"
    >
      <a
        class="c3"
        href="/speed-up"
      >
        <svg
          class="c4"
          fill="none"
          height="25px"
          viewBox="0 0 30 25"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.1982 13.6736C14.0714 13.9822 13.8873 14.2507 13.6605 14.4577L3.9218 23.3482C3.6505 23.5959 3.32789 23.7467 2.99012 23.7838C2.65236 23.8208 2.31279 23.7427 2.00946 23.5581C1.70613 23.3735 1.45102 23.0898 1.27273 22.7386C1.09444 22.3875 1 21.9829 1 21.5701V3.78904C1 3.37627 1.09444 2.97166 1.27273 2.62053C1.45102 2.26941 1.70613 1.98565 2.00946 1.80106C2.31279 1.61646 2.65236 1.53832 2.99012 1.57539C3.32789 1.61246 3.6505 1.76327 3.9218 2.01093L13.6605 10.9015C13.8873 11.1085 14.0714 11.377 14.1982 11.6856C14.325 11.9942 14.391 12.3345 14.391 12.6796C14.391 13.0246 14.325 13.3649 14.1982 13.6736Z"
            stroke="#3F3F46"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M28.8072 13.6736C28.6804 13.9822 28.4963 14.2507 28.2695 14.4577L18.5308 23.3482C18.2595 23.5959 17.9369 23.7467 17.5991 23.7838C17.2614 23.8208 16.9218 23.7427 16.6185 23.5581C16.3151 23.3735 16.06 23.0898 15.8817 22.7386C15.7035 22.3875 15.609 21.9829 15.609 21.5701V3.78904C15.609 3.37627 15.7035 2.97166 15.8817 2.62053C16.06 2.26941 16.3151 1.98565 16.6185 1.80106C16.9218 1.61646 17.2614 1.53832 17.5991 1.57539C17.9369 1.61246 18.2595 1.76327 18.5308 2.01093L28.2695 10.9015C28.4963 11.1085 28.6804 11.377 28.8072 11.6856C28.934 11.9942 29 12.3345 29 12.6796C29 13.0246 28.934 13.3649 28.8072 13.6736Z"
            stroke="#3F3F46"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Speed up
      </a>
      <a
        class="c5"
        href="/cancel"
      >
        <svg
          class="c6"
          fill="none"
          height="28px"
          viewBox="0 0 22 28"
          width="0.8rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 1.33203L21 26.028M1 26.028L21 1.33203L1 26.028Z"
            stroke="#3F3F46"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Cancel
      </a>
    </div>
  </div>
  <div
    class="c7"
  >
    <div
      class="c8"
    >
      <div>
        CID
      </div>
      <div>
        bafy2bzaced3ub5g4v35tj7n74zsog3dmcum4tk4qmchbhjx7q747jghal3l4g
      </div>
    </div>
    <div
      class="c8"
    >
      <div>
        Height
      </div>
      <div>
        Pending
      </div>
    </div>
    <div
      class="c8"
    >
      <div>
        Timestamp
      </div>
      <div>
        Pending
      </div>
    </div>
    <hr />
    <div
      class="c8"
    >
      <div>
        From
      </div>
      <div>
        <div
          class="c9"
        >
          
          <div
            class="c10"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1z225 ... 6z6wgi
            </a>
            <div
              class="c11"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c12 c13"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c14 c15 c16"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c17 c18"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c8"
    >
      <div>
        To
      </div>
      <div>
        <div
          class="c9"
        >
          
          <div
            class="c10"
            color="var(--purple-medium)"
          >
            <a
              href="https://explorer-calibration.glif.link/actor/?address=t1nq5k2mps5umtebdovlyo7y6a3ywc7u4tobtuo3a"
              rel="noreferrer noopener"
              target="_blank"
            >
              t1nq5k ... btuo3a
            </a>
            <div
              class="c11"
              color="var(--purple-medium)"
              display="flex"
            >
              <button
                class="c12 c13"
                display="flex"
                role="button"
                type="button"
              >
                <svg
                  class="c14 c15 c16"
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#1A0066"
                    height="12"
                    width="12"
                    x="8"
                    y="4"
                  />
                  <rect
                    fill="#E0D7FE"
                    height="12"
                    width="12"
                    x="4"
                    y="8"
                  />
                </svg>
                <span
                  class="c17 c18"
                  color="var(--purple-medium)"
                >
                  Copy
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="c8"
    >
      <div>
        Value
      </div>
      <div>
        0.000000000000001 FIL
      </div>
    </div>
    <div
      class="c8"
    >
      <div>
        Method
      </div>
      <div>
        <div
          class="c19"
          color="purple"
        >
          <span>
            SEND
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
